# VANGUARD

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  codebase.md  pyproject.toml
.github/: pull_request_template.md
config/: agent_config.yaml.example
core/llm/: __init__.py  base.py  featherless_client.py
core/rag/: __init__.py  embeddings.py  extractor.py
core/schemas/: __init__.py  debate.py  findings.py  messages.py  reporting.py
docker/: docker-compose.yml
docs/: ARCHITECTURE.md  DEMO_SCRIPT.md  LABLAB_SUBMISSION.md  PROJECT_PLAN.md  TEAM_CHARTER.md
docs/adr/: 001-band-room-as-system-bus.md  002-truthlock-gate-before-phase-c.md
docs/prompts/: arbiter.md  forge.md  herald.md  intake.md  ledger.md  lexis.md  sentinel.md  truthlock.md
docs/reference/: cpra.md  gdpr.md  gdpr_key_articles.txt  hipaa.md  iso27001.md  iso27001_controls.txt  nist_csf.md  oecd.md  sentinel_signals.txt  soc2.md  soc2_trust_criteria.txt
scripts/: README.md  generate_sample_pdf.py  run_tests.sh
tests/: test_llm.py  test_rag.py  test_schemas.py
tests/documents/: aws_agreement.md  azure_agreement.md  google_cloud_agreement.md  salesforce_dpa.md  stripe_agreement.md
