[project]
name = "vanguard"
version = "0.1.0"
description = "Sistema multi-agente para procesamiento y validación de documentos"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "agents"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
