[project]
name = "vanguard"
version = "0.1.0"
description = "Multi-agent TPRM platform for law firms — vendor compliance audits via Band"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["core", "agents", "dashboard", "integrations"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
